Revert "Merge branch 'dev' into expo-clean."
This reverts commit 529325b5e97b426f26b8a3aac6d0a0e6a7584d7b, reversing
changes made to 0a51fc8cffe7c9f50ba4333b731c63e49a6bc1b5.