@@ -1,9 +1,13 @@
 package com.mensajeria.service;
 
 import com.mensajeria.persistency.dao.jpa.UserDAOJPA;
-import com.mensajeria.utils.JwtUtils;
+import com.mensajeria.persistency.repositories.sql.user.UserRepositoryJPA;
+import com.mensajeria.security.jwt.JwtUtils;
 import com.mensajeria.security.jwt.dto.LoginRequest;
 import com.mensajeria.security.jwt.dto.LoginResponse;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -16,6 +20,7 @@ import org.springframework.stereotype.Service;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -54,8 +59,8 @@ public class SecurityServiceImpl {
 
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .toList();
+                .collect(Collectors.toList());
 
-        return new LoginResponse(userDetails.getUsername(), userId, jwtToken);
+        return new LoginResponse(userDetails.getUsername(), userId, roles, jwtToken);
     }
 }
